storing data in local storage works

--- a/src/sassFiles/style.scss
+++ b/src/sassFiles/style.scss
@@ -2,6 +2,7 @@ $headingFont : 'Alegreya', serif;
 $sideFont : 'Macondo', cursive;
 $lightDark : #414141;
 $dark : #383838;
+// $black : #181818;
 $orangeImportance: #FF8A5C;
 $yellowImportance: #FFDD67;
 $redImportance: #CF455C;
