--- a/src/sassFiles/style.scss
+++ b/src/sassFiles/style.scss
@@ -162,7 +162,7 @@ body{
         font-family: $sideFont;
         margin-bottom: 20px;
         &:hover{
-            background-color: #e9e9e9;
+            background-color: #b6b6b6;
             color: rgb(18, 18, 18);
         }
     }
@@ -178,6 +178,10 @@ body{
     color: $txt;
     padding-left: 10%;
     font-size: 1rem;
+
+    &:hover{
+        background-color: #4c4c4c;
+    }
 }
 
 .interface{
