--- a/src/sassFiles/style.scss
+++ b/src/sassFiles/style.scss
@@ -31,11 +31,6 @@ body{
     padding: 10% 0 10% 0;
     box-sizing: border-box;
 
-    h2{
-        color: $txt;
-        font-weight: 400;
-    }
-
     button{
         text-align: start;
         border-radius: 10px;
@@ -269,4 +264,30 @@ body{
                 object-fit: cover;
             }
         }
+}
+
+@media (max-width: 860px) {
+    body{
+        display : grid;
+        grid-template-rows: 8fr 2fr;
     }
+    .navbar{
+        grid-row: 2/3;
+        grid-column: 1/3;
+        background-color: $dark;
+        display : flex ;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        padding: 5% 0 5% 0;
+        box-sizing: border-box;
+        overflow-y:scroll;
+        button{
+            padding: 2%;
+        }
+    }
+    .rightSide{
+        grid-row: 1/2;
+        grid-column: 1/3;
+    }
+}
